# polarrecorder

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  export-ui.js  grid-editor.js  install.sh  kilo.jsonc  package.json  plugin.css  plugin.js  plugin.json  plugin.mjs  plugin.py  polar-chart.js  pyproject.toml  viewer.html  viewer.js
.githooks/: pre-push
.github/workflows/: publish-release.yml
.kilo/: README.md  kilo.jsonc
.kilo/agents/: context-scout.md  docs-worker.md  implementation-worker.md  plan-controller.md  pro-quality-verifier.md  pro-requirements-verifier.md  test-worker.md
.kilo/commands/: exec-plan.md  verify-phase.md
documentation/: QUALITY.md  TABLEOFCONTENTS.md  TECH-DEBT.md  core-principles.md
documentation/architecture/: api.md  data-pipeline.md  import-restore.md  persistence.md  plugin-lifecycle.md  polar-model.md  ui.md
documentation/avnav/: editable-parameters.md  keys-and-units.md  plugin-lifecycle.md  request-routing-and-static-files.md
documentation/conventions/: coding-standards.md  documentation-format.md  quality-gates.md  smell-fix-playbooks.md  smell-prevention.md  testing-infrastructure.md
documentation/filters/: poisoning-resistance.md  rejection-rules.md
documentation/guides/: documentation-maintenance.md  exec-plan-authoring.md  garbage-collection.md  release-workflow.md
documentation/user/: configuration.md  export-import.md  troubleshooting.md
exec-plans/active/: PLAN1.amendments.md  PLAN1.md  PLAN1.progress.md  PLAN2.md  PLAN3.md  PLAN5.md
exec-plans/completed/: PLAN1.md  PLAN3.md  PLAN4.md
polarrecorder/: api_dispatch.py  api_handlers.py  bins.py  config.py  logger.py  params.py  polar_model.py  reader.py
polarrecorder/validation/: rules_core.py  rules_stability.py  state.py
releases/: polarrecorder-1.0.0-beta.1.md  polarrecorder-1.0.0-beta.2.md  polarrecorder-1.0.0-beta.3.md  polarrecorder-1.0.0-beta.4.md  polarrecorder-1.0.0-beta.5.md  polarrecorder-1.0.0-beta.6.md  polarrecorder-1.0.0-beta.7.md  polarrecorder-1.0.0.md
server/polarrecorder/: __init__.py  api_config.py  api_dispatch.py  api_enhanced.py  api_handlers.py  coerce.py  commit.py  config.py  counters.py  enhanced_status.py  export.py  histogram.py  import_common.py  logger.py  params.py  persistence.py  preset_backup.py  projection.py  reader.py  restore.py  sample.py  timeline.py  units.py
server/polarrecorder/validation/: angle_math.py  pipeline.py  rules_enhanced.py  rules_heuristic.py  rules_stability.py  state.py
tests/: conftest.py  plugin_integration_support.py  test_angle_math.py  test_api_config.py  test_api_handlers.py  test_avnav_registration_contract.py  test_bins.py  test_coerce.py  test_commit.py  test_config.py  test_counters.py  test_coverage_checker.py  test_enhanced_status.py  test_export.py  test_histogram.py  test_import_flow.py  test_logger.py  test_performance_checker.py  test_persistence.py  test_plugin_integration.py  test_poisoning_scenarios.py  test_polar_model.py  test_preset_backup.py  test_py_contracts_checker.py  test_py_dependencies_checker.py  test_python_compat_checker.py  test_python_filesize_checker.py  test_reader.py  test_release_manifest.py  test_restore.py  test_runtime_contracts_checker.py  test_sample.py  test_smoke.py  test_timeline.py  test_units.py  test_validation_core.py  test_validation_enhanced.py  test_validation_heuristic.py  test_validation_pipeline.py  test_validation_stability.py  (+1 more)
tests/mock-data/: config.json  export-json.json  export-windy.csv  polar.json  presets.json  rejections.json  status.json  timeline.json
tools/: check-agent-setup.sh  check-ai-instructions.mjs  check-all.sh  check-coverage.py  check-dependencies.mjs  check-doc-format.mjs  check-doc-reachability.mjs  check-docs.mjs  check-duplication.py  check-file-size.mjs  check-headers.mjs  check-hooks.mjs  check-js-coverage.mjs  check-js-duplication.mjs  check-namespace.mjs  check-naming.mjs  check-patterns.mjs  check-performance.py  check-py-contracts.py  check-py-dependencies.py  check-python-compat.py  check-python-filesize.py  check-release.py  check-runtime-contracts.py  check-smell-catalog.mjs  check-smell-contracts.mjs  check-viewer-contracts.mjs  install-hooks.mjs  mock-server.py  release-create.mjs  release-prepare.mjs  release-runtime.mjs  release-zip.py  release_manifest.py  sync-ai-instructions.mjs  test-check-patterns.mjs  test-js-checkers.mjs  test-plugin-mjs.mjs  test-viewer-advanced.mjs  test-viewer-enhanced.mjs  (+4 more)
viewer/: advanced-settings.js  dom.js  enhanced-settings.js  export-ui.js  grid-editor.js  import-upload.js  placeholders.js  polar-chart.js  presets.js  settings-ui.js  theme.js  timeline-chart.js  viewer.css  viewer.html  viewer.js
